tests/invalid/Array_Invalid_6.whiley
function f(int[] a) -> int:
    return a
